# shared

./: .gitignore  CMakeLists.txt  README.md
ai_share/: 16x16_layer.cpp  16x16_layer.h  CMakeLists.txt  README.md  ai_action_commands.cpp  ai_actions.cpp  ai_actions.h  ai_actions_dr.cpp  ai_actions_dr.h  ai_aiming_type.cpp  ai_aiming_type.h  ai_alias_description_node.cpp  ai_alias_description_node.h  ai_coord.h  ai_entity_physical_list_link.h  ai_event.cpp  ai_event.h  ai_event_description.h  ai_event_report.cpp  ai_event_report.h  ai_primitive_parser.cpp  ai_primitive_parser.h  ai_share.h  ai_spawn_commands.cpp  ai_spawn_commands.h  ai_types.cpp  ai_types.h  ai_vector.h  ai_wrapper_server.cpp  aids_messages.h  ais_messages.h  angle.h  primitive_parser.cpp  static_vector.h  world_map.cpp  world_map.h
game_share/: CMakeLists.txt  _backup_service_interface_implementation.h  _backup_service_interface_non_module.cpp  _backup_service_interface_singleton.cpp  _backup_service_interface_singleton.h  action.cpp  action.h  action_association.h  action_block.cpp  action_block.h  action_disconnection.h  action_dummy.h  action_factory.cpp  action_factory.h  action_generic.cpp  action_generic.h  action_generic_multi_part.h  action_login.h  action_nature.cpp  action_nature.h  action_position.cpp  action_position.h  action_sint64.cpp  action_sint64.h  action_sync.cpp  action_sync.h  action_target_slot.h  ai_wrapper.h  animal_status.cpp  animal_status.h  animal_type.h  animals_orders.cpp  animals_orders.h  armor_types.cpp  armor_types.h  backup_service_interface.cpp  backup_service_interface.h  backup_service_messages.h  base_types.h  bg_downloader_msg.cpp  (+292 more)
game_share/time_weather_season/: static_light_cycle.cpp  static_light_cycle.h  time_and_season.cpp  time_and_season.h  time_date_season_manager.cpp  time_date_season_manager.h  weather_function.cpp  weather_function.h  weather_function_params_sheet_base.cpp  weather_function_params_sheet_base.h  weather_function_sheet.cpp  weather_function_sheet.h  weather_manager.cpp  weather_manager.h  weather_predict.cpp  weather_predict.h  weather_setup.cpp  weather_setup.h  weather_setup_sheet_base.cpp  weather_setup_sheet_base.h
gameplay_module_lib/: CMakeLists.txt  gameplay_module_lib.h  module.cpp  module.h  module_core.cpp  module_core.h  module_core_inline.h  module_inline.h  module_parent.cpp  module_parent.h  module_parent_inline.h  module_proxy.h  module_utils.h
nel/: CMakeLists.txt
nel/samples/georges/: main.cpp
nel/samples/misc/: CMakeLists.txt
nel/samples/pacs/: main.cpp  object.cpp  object.h
nel/src/3d/: anim_detail_trav.cpp  animatable.cpp  animated_lightmap.cpp  animated_material.cpp  animated_morph.cpp  animation.cpp  animation_optimizer.cpp  animation_playlist.cpp  animation_set.cpp  animation_set_user.cpp  async_file_manager_3d.cpp  async_texture_manager.cpp  bezier_patch.cpp  bloom_effect.cpp  bone.cpp  camera.cpp  camera_col.cpp  channel_mixer.cpp  clip_trav.cpp  cloud.cpp  cloud_scape.cpp  cloud_scape_user.cpp  cluster.cpp  coarse_mesh_build.cpp  coarse_mesh_manager.cpp  computed_string.cpp  cube_map_builder.cpp  debug_vb.cpp  deform_2d.cpp  driver.cpp  driver_user.cpp  driver_user2.cpp  dru.cpp  event_mouse_listener.cpp  fast_ptr_list.cpp  fasthls_modifier.cpp  flare_model.cpp  flare_shape.cpp  font_generator.cpp  font_manager.cpp  (+254 more)
nel/src/cegui/: CMakeLists.txt  nellogger.cpp  nelrenderer.cpp  nelresourceprovider.cpp  neltexture.cpp
nel/src/georges/: form.cpp  form_dfn.cpp  form_elm.cpp  form_loader.cpp  header.cpp  stdgeorges.h  type.cpp
nel/src/gui/: CMakeLists.txt  action_handler.cpp  css_background.cpp  css_background_renderer.cpp  css_border_renderer.cpp  css_length.cpp  css_parser.cpp  css_selector.cpp  css_style.cpp  ctrl_base.cpp  ctrl_base_button.cpp  ctrl_button.cpp  ctrl_col_pick.cpp  ctrl_draggable.cpp  ctrl_polygon.cpp  ctrl_quad.cpp  ctrl_scroll.cpp  ctrl_scroll_base.cpp  ctrl_sheet_selection.cpp  ctrl_text_button.cpp  ctrl_tooltip.cpp  db_manager.cpp  dbgroup_combo_box.cpp  dbgroup_select_number.cpp  dbview_bar.cpp  dbview_bar3.cpp  dbview_digit.cpp  dbview_number.cpp  dbview_quantity.cpp  event_descriptor.cpp  event_listener.cpp  group_container.cpp  group_container_base.cpp  group_editbox.cpp  group_editbox_base.cpp  group_editbox_decor.cpp  group_frame.cpp  group_header.cpp  group_html.cpp  group_list.cpp  (+54 more)
nel/src/ligo/: ligo_config.cpp  ligo_error.cpp  ligo_material.cpp  primitive.cpp  primitive_class.cpp  primitive_configuration.cpp  primitive_utils.cpp  stdligo.h  transition.cpp  zone_bank.cpp  zone_edge.cpp  zone_region.cpp  zone_template.cpp
server_share/: CMakeLists.txt  README.md  action_flags.cpp  action_flags.h  animal_hunger.cpp  animal_hunger.h  backup_service_itf.cpp  backup_service_itf.h  basic_effect.cpp  basic_effect.h  char_name_mapper_itf.cpp  char_name_mapper_itf.h  chat_unifier_itf.cpp  chat_unifier_itf.h  combat_state.h  combat_vision_delta.h  command_executor.cpp  command_executor_itf.cpp  command_executor_itf.h  continent_container.cpp  continent_container.h  creature_size.cpp  creature_size.h  effect_manager.cpp  effect_manager.h  effect_message.cpp  effect_message.h  entity_locator_itf.cpp  entity_locator_itf.h  entity_state.h  event_report.h  fixed_size_int_vector.h  handy_commands.cpp  handy_commands.h  item_service_type.cpp  item_service_type.h  light_ig_loader.cpp  light_ig_loader.h  log_character_gen.cpp  log_character_gen.h  (+68 more)
sol/: forward.hpp
(+1931 files in other folders)
