

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})


IF(WITH_RYZOM_TOOLS OR WITH_RYZOM_SERVER)
ADD_SUBDIRECTORY(server_share)
ADD_SUBDIRECTORY(ai_share)
ADD_SUBDIRECTORY(game_share)
ENDIF()

IF(WITH_RYZOM_CLIENT)
  ADD_SUBDIRECTORY(game_share)
ENDIF()


IF(WITH_RYZOM_SERVER)
  ADD_SUBDIRECTORY(gameplay_module_lib)
ENDIF()
