FILE(GLOB SRC *.cpp *.h)

NL_TARGET_LIB(gameplaymodule ${SRC})

TARGET_LINK_LIBRARIES(gameplaymodule nelmisc)
NL_DEFAULT_PROPS(gameplaymodule "Ryzom, Library: Gameplay Module")
NL_ADD_RUNTIME_FLAGS(gameplaymodule)
NL_ADD_LIB_SUFFIX(gameplaymodule)

IF((WITH_INSTALL_LIBRARIES AND WITH_STATIC) OR NOT WITH_STATIC)
  INSTALL(TARGETS gameplaymodule LIBRARY DESTINATION ${LIB_PREFIX} ARCHIVE DESTINATION ${LIB_PREFIX} COMPONENT libraries)
ENDIF()

