FILE(GLOB SRC *.cpp *.h)
FILE(GLOB HEADERS ../../include/nel/gui/*.h)

SOURCE_GROUP("" FILES ${HEADERS} ${SRC})

NL_TARGET_LIB(nelgui ${SRC} ${HEADERS})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${LUA_INCLUDE_DIR} ${CURL_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(nelgui nelmisc nelweb nel3d ${LUA_LIBRARIES} ${CURL_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(nelgui PUBLIC
  ${CMAKE_SOURCE_DIR}/shared
)

NL_DEFAULT_PROPS(nelgui "NeL, Library: NeL GUI")
NL_ADD_RUNTIME_FLAGS(nelgui)

NL_ADD_LIB_SUFFIX(nelgui)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS} ${CURL_DEFINITIONS})

SET_TARGET_PROPERTIES(nelgui PROPERTIES
  INSTALL_RPATH "$ORIGIN/lib:$ORIGIN/../lib"
  BUILD_RPATH   "$ORIGIN/lib:$ORIGIN/../lib")


IF(WITH_PCH)
  TARGET_PRECOMPILE_HEADERS(nelgui PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/stdpch.h)
ENDIF()

IF((WITH_INSTALL_LIBRARIES AND WITH_STATIC) OR NOT WITH_STATIC)
  INSTALL(TARGETS nelgui LIBRARY DESTINATION ${NL_LIB_PREFIX} ARCHIVE DESTINATION ${NL_LIB_PREFIX} COMPONENT libraries)
ENDIF()
